# Algorithm-HomeWork

./: GridSolver.cpp  Hanoi_tower.cpp  IsPalindrome.cpp  ParathensesValidator.cpp  homework1.cpp  homework2.cpp  longest_common_subsequence.cpp  matrix_chain_multiplication.cpp  merge_stacks.cpp  polynomial_hw.cpp
AVL/: avl.cpp  avl.h
Deque/: ArrayDeque.cpp  ArrayDeque.h  IDeque.h  ListDeque.cpp  ListDeque.h
List/: ArrayList.hpp  ArrayList.tpp  CircularLinkedList.hpp  CircularLinkedList.tpp  DoubleLinkedList.hpp  DoubleLinkedList.tpp  IList.hpp
Queue/: ArrayQueue.hpp  ArrayQueue.tpp  IQueue.hpp  ListQueue.hpp  ListQueue.tpp
Red Black Tree/: tree.cpp  tree.hpp
Stack/: ArrayStack.hpp  ArrayStack.tpp  IStack.hpp  LinkedStack.hpp  LinkedStack.tpp
hw_make/: CMakeLists.txt
hw_make/src/: CMakeLists.txt
hw_make/src/cli/: cli.cpp  cli.h  main.cpp
hw_make/src/core/: config.h  errors.cpp  errors.h  source_location.h
hw_make/src/engine/: executor.cpp  executor.h  graph.cpp  graph.h  rule_database.cpp  rule_database.h
hw_make/src/eval/: variable_table.cpp  variable_table.h
hw_make/src/parser/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
